--- a/css/imports/markupcontent.css
+++ b/css/imports/markupcontent.css
@@ -19,7 +19,7 @@
 .markupcontent h3 {
   margin: 2rem 0 1rem 0;
   font-size: 1.05rem;
-  font-family: var(--font-family-serif);
+  /*font-family: var(--font-family-serif);*/
 }
 .markupcontent h4 {
   margin-bottom: 0.5rem;
