--- a/css/imports/fonts.css
+++ b/css/imports/fonts.css
@@ -1,5 +1,11 @@
 @charset "utf-8";
 
+@import url('font-inter.css');
+html { font-family: 'Inter', sans-serif; }
+@supports (font-variation-settings: normal) {
+  html { font-family: 'Inter var', sans-serif; }
+}
+
 @font-face {
   font-family: 'PT Root UI';
   font-weight: 300;
