--- a/css/imports/block-pf-footer.css
+++ b/css/imports/block-pf-footer.css
@@ -1,5 +1,5 @@
 .block-pf-footer {
-  background: var(--color-primary);
+  background: var(--color-primary-1);
   color: var(--color-white);
   padding-top: 4rem;
   padding-bottom: 4rem;
