--- a/css/imports/block-three-column-1.css
+++ b/css/imports/block-three-column-1.css
@@ -1,3 +1,8 @@
+.block-three-column-1 {
+  padding-top: 0;
+  padding-bottom: 8rem;
+}
+
 .block-three-column-1 .columns {
   display: flex;
   flex-wrap: wrap;
@@ -7,14 +12,19 @@
 .block-three-column-1 .column {
   flex: 0 0 calc(100% - 4rem);
   margin: 2rem;
-  text-align: center;
 }
 
 .block-three-column-1 .column h3 {
-  margin-bottom: 1rem;
+  margin-bottom: 0.8rem;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (max-width: 699px) {
+  .block-three-column-1 .column:last-child {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 700px) {
   .block-three-column-1 .column {
     flex: 0 0 calc(33.33% - 4rem);
   }
