--- a/css/imports/block-feature-list-1.css
+++ b/css/imports/block-feature-list-1.css
@@ -44,12 +44,12 @@
 }
 
 .block-feature-list-1 .features .cta .button {
-  border: 2px solid var(--color-primary);
+  border: 2px solid var(--color-primary-1);
   padding: 0.5rem 1rem;
   width: 60%;
   text-align: center;
   font-size: 1rem;
-  color: var(--color-primary);
+  color: var(--color-primary-1);
 }
 
 @media screen and (max-width: 699px) {
