--- a/css/imports/block-field-animation-1.css
+++ b/css/imports/block-field-animation-1.css
@@ -6,6 +6,10 @@
   font-size: calc(4rem/3);
 }
 
+.pf-animation__text2 p {
+  font-size: calc(4rem/3);
+}
+
 .pf-animation__text ul {
   font-size: calc(4rem/3);
   color: var(--color-primary-2);
@@ -34,15 +38,24 @@
   }
   .pf-animation__text {
     padding: 8rem 0;
+    padding: 20px 0;
+  }
+  .pf-animation__text2 {
+    padding: 8rem 0;
+    padding: 20px 0;
   }
   .pf-animation__media img {
     top: 0;
     left: 0;
     width: 100%;
+    /*width: 70%;*/
   }
 }
 
 @media screen and (min-width: 700px) {
+  .block.pf-animation {
+    padding-top: 0;
+  }
   .pf-animation .container {
     display: flex;
   }
@@ -57,6 +70,25 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+  }
+  .pf-animation__text2 {
+    display: flex;
+    flex-direction: column;
+  }
+  .pf-animation__text2_pre {
+    min-height: 36vh;
+  }
+  .pf-animation__text2_first {
+    min-height: 20vh;
+    justify-content: center;
+  }
+  .pf-animation__text2_second {
+    min-height: 18vh;
+    justify-content: end;
+  }
+  .pf-animation__text2_third {
+    min-height: 17vh;
+    justify-content: end;
   }
   .pf-animation__media {
     height: 100vh;
