--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
 @import "imports/block-header-1.css";
 @import "imports/block-header-2.css";
 @import "imports/block-header-3.css";
+@import "imports/block-heading.css";
 @import "imports/block-hero-1.css";
 @import "imports/block-hero-2.css";
 @import "imports/block-hero-3.css";
