Make links in navigation bold

--- a/css/imports/block-pf-navigation.css
+++ b/css/imports/block-pf-navigation.css
@@ -28,6 +28,9 @@
   padding-left: 2rem;
   font-size: .833333333rem;
 }
+.block-pf-navigation--nav a {
+  font-weight: bold;
+}
 .block-pf-navigation--nav .nav-item:hover a {
   text-decoration: none;
 }
