--- a/css/imports/block-three-column-1.css
+++ b/css/imports/block-three-column-1.css
@@ -19,6 +19,22 @@
 }
 
 @media screen and (max-width: 699px) {
+  .block-three-column-1 {
+    padding-bottom: 4rem;
+  }
+  .block-three-column-1 .columns {
+    display: block;
+    margin: 0;
+  }
+  .block-three-column-1 .column {
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+  .block-three-column-1 .column:first-child {
+    margin-top: 0;
+  }
   .block-three-column-1 .column:last-child {
     margin-bottom: 0;
   }
