--- a/css/imports/block-field-animation-1.css
+++ b/css/imports/block-field-animation-1.css
@@ -35,6 +35,7 @@
     width: 100%;
     height: 50vh;
     padding: 1rem;
+    height: 32vh;
   }
   .pf-animation__text {
     padding: 8rem 0;
@@ -49,6 +50,15 @@
     left: 0;
     width: 100%;
     /*width: 70%;*/
+    padding: 0 25%;
+  }
+  #step-9,
+  #step-12,
+  #step-14 {
+    display: none;
+  }
+  #step-16 {
+    padding-bottom: 30px;
   }
 }
 
