--- a/css/imports/block-feature-list-1.css
+++ b/css/imports/block-feature-list-1.css
@@ -59,6 +59,10 @@
 }
 
 @media screen and (min-width: 700px) {
+  .block-feature-list-1#resources-links .columns .columns:first-child {
+    margin-bottom: 10px;
+  }
+
   .block-feature-list-1 .column.text {
     flex: 0 0 calc(100% / 3 * 2 - 4rem);
     margin-right: 4rem;
@@ -72,6 +76,10 @@
   .block-feature-list-1 .features .column.text {
     flex: 0 0 calc(100% - 1rem - 50px);
     margin: 0 0 0 1rem;
+  }
+
+  .block-feature-list-1 .features .column.text-small {
+    flex: 0 0 120px;
   }
 
   .block-feature-list-1 .features .column.media {
