--- a/css/imports/block-hero-1.css
+++ b/css/imports/block-hero-1.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: var(--color-background);
+  /*background-color: var(--color-background);*/
   background-color: var(--color-primary-1);
   background-position: center;
   background-size: cover;
