--- a/css/imports/variables.css
+++ b/css/imports/variables.css
@@ -14,7 +14,8 @@
   --color-primary: rgb(56, 90, 241);
   --color-primary-1: #1BC2A8;
   --color-primary-2: #024B4B;
-  --color-highlight: rgba(75, 120, 255, 0.67);
+  --color-highlight: var(--color-primary-2);
+  --color-highlight-1: #D81E9B;
   --color-complementary-1: rgb(255, 205, 75);
   --color-complementary-2: rgb(178, 134, 17);
 
